<!--
  ~ @author "Victor I. Afolabi"
  ~  Created and developed by Victor I. Afolabi.
  ~  Artificial Intelligence engineer & Software developer.
  ~
  ~  Contact the developer:
  ~  Email: <a href="mailto: javafolabi@gmail.com">javafolabi@gmail.com</a>
  ~  Phone no: +234 814 120 5245
  ~  GitHub: <a href="https://github.com/victor-iyiola">victor-iyiola</a>
  ~
  ~  Date: 12, 8 2017.
  ~
  ~ Copyright Victor I. Afolabi © 2017. All rights reserved.
  -->

<resources>
  <string name="app_name">Udacity Practise</string>
  <string name="victor">Victor</string>
  <string name="iyiola">Iyiola</string>
  <string name="afolabi">Afolabi</string>
  <string name="invited">You\'re Invited!</string>
  <string name="cat_image">Cat Image</string>
  <string name="bonfire_at_the_beach">Bonfire at the beach</string>
  <string name="write_a_message">Write a message</string>
  <string name="send_message">Send message</string>
  <string name="open_gallery">Open gallery</string>
  <string name="chat_background_image">Chat background image</string>
  <string name="natalie">Natalie</string>
  <string name="ben">Ben</string>
  <string name="lyla">Lyla</string>
  <string name="jennie">Jennie</string>
  <string name="kagure">Kagure</string>
  <string name="kunal">Kunal</string>
  <string name="omoju">Omoju</string>
  <string name="me">Me</string>
  <string name="amy">Amy</string>
  <string name="lizard_background_image">Lizard background Image</string>
  <string name="happy_birthday_gloria">Happy Birthday, Gloria!</string>
  <string name="from_victor">From, Victor!</string>
  <string name="quantity">Quantity</string>
  <string name="_0">0</string>
  <string name="order">Order</string>
  <string name="price">Price</string>
  <string name="plus">+</string>
  <string name="minus">-</string>
  <string name="increment_button">Increment button</string>
  <string name="decrement_button">Decrement button</string>
</resources>
