<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/lizard"
        android:scaleType="centerCrop"
        android:contentDescription="@string/lizard_background_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/fifteen_dp"
        android:text="@string/happy_birthday_gloria"
        android:textColor="@color/white"
        android:textSize="@dimen/thirty_two_sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="@dimen/fifteen_dp"
        android:text="@string/from_victor"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="@dimen/thirty_two_sp" />

</RelativeLayout>