<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ @author "Victor I. Afolabi"
  ~  Created and developed by Victor I. Afolabi.
  ~  Artificial Intelligence engineer & Software developer.
  ~
  ~  Contact the developer:
  ~  Email: <a href="mailto: javafolabi@gmail.com">javafolabi@gmail.com</a>
  ~  Phone no: +234 814 120 5245
  ~  GitHub: <a href="https://github.com/victor-iyiola">victor-iyiola</a>
  ~
  ~  Date: 12, 8 2017.
  ~
  ~ Copyright Victor I. Afolabi © 2017. All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  tools:context="com.victoriyiola.udacitypractise.LayoutsExample">

  <ImageView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:contentDescription="@string/cat_image"
    android:scaleType="centerCrop"
    android:src="@drawable/cat" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:background="@color/green"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:text="@string/invited"
    android:textColor="@color/white"
    android:textSize="54sp" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="0"
    android:background="@color/green"
    android:paddingBottom="8dp"
    android:paddingEnd="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingStart="16dp"
    android:text="@string/bonfire_at_the_beach"
    android:textColor="@color/white"
    android:textSize="34sp" />


</LinearLayout>
